# MmMi-Datasets

./: .gitignore  LICENSE  README.md  dataset_generation.py  dataset_generation.sh  dataset_generation.sub  environment.yml  pixi.toml  pyproject.toml  sweep_explorer.py  sweep_generate.py  sweep_generate.sh  sweep_generate.sub
dataset_generation/: constructive_mutual_information.py  dataset_loader.py  generation_arg_parser.py  latent_generator.py  multimodal_MI_plot.py  mutual_info_calculations.py  mutual_information.py  visualizer.py
environments/docker/: Dockerfile  README.md  requirements.txt
generation_arguments/: galaxy_images_curve_DAG.txt  galaxy_rot_curve_1_0_DAG.txt  galaxy_rot_curve_DAG.txt  multimodal_decay_DAG.txt  simple_fig1_DAG.txt
models/: model_configs.py
scripts/: sweep_generate.py  sweep_generate.sub
train/: README.md  submitit_train.py  submitit_train_args.txt  train.py  train_arg_parser.py
train/training/: eval_loop.py  load_and_save.py  train_loop.py
